# ai-short-film

./: .gitignore  CODEBUDDY.md  README.md  README.zh.md  TODO.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: celery_app.py  config.py  database.py  deps.py  main.py
backend/app/agent/: __init__.py  context.py  runner.py  shot_prompt_agent.py
backend/app/models/: __init__.py  asset.py  conversation.py  episode.py  invite_code.py  llm_call_record.py  production_blueprint.py  project.py  prompt_config.py  script_block.py  shot.py  task_record.py  user.py
backend/app/parsing/: __init__.py  asset_registry_builder.py  blueprint_planner.py  blueprint_validator.py  context_pack.py  continuity_seed_builder.py  episode_builder.py  orchestrator.py  parse_report_builder.py  range_utils.py
backend/app/prompts/: __init__.py  agent_prompts.py  llm_prompts.py
backend/app/routers/: assets.py  auth.py  conversations.py  episodes.py  generation.py  projects.py  shots.py  sts.py  tasks.py
backend/app/schemas/: asset.py  auth.py  conversation.py  episode.py  project.py  prompt_config.py  shot.py
backend/app/services/: asset_prompt_builder.py  asset_service.py  auth_service.py  llm_service.py  (+11 more)
backend/scripts/: gen_invite_codes.py
backend/tests/: conftest.py  test_asset_prompt_builder.py  test_assets.py  test_continuity_pipeline.py  test_conversations.py  test_episodes.py  test_generation.py  test_health.py  test_parsing_modules.py  test_projects.py  test_prompt_configs.py  test_script_indexer.py  test_shots.py
(+69 files in other folders)
