[build-system]
requires = ["setuptools>=68", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-short-film-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "beanie>=1.26.0",
    "motor>=3.5.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1.0",
    "cos-python-sdk-v5>=1.9.30",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "openai>=1.40.0",
    "instructor>=1.4.0",
    "volcengine-python-sdk[ark]>=3.0.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "mongomock-motor>=0.0.21",
]
